added schemas for mysql practice

--- a/schemas/manifest.json
+++ b/schemas/manifest.json
@@ -1,6 +1,8 @@
 {
   "schemas": [
     {"name": "sales", "tables": ["customers.csv", "orders.csv", "items.csv"]},
-    {"name": "hr",    "tables": ["employees.csv", "departments.csv"]}
+    {"name": "hr",    "tables": ["employees.csv", "departments.csv"]},
+    {"name": "parks_and_recreation", "tables": ["employee_demographics.csv", "employee_salary.csv", "parks_departments.csv"]},
+    {"name": "uncleaned_data",    "tables": ["easy_uncleaned.csv", "medium_uncleaned.csv", "hard_uncleaned.csv"]},
   ]
 }
